added database for blocked apps - bug for main page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SignIn"
+            android:name=".LogIn"
             android:exported="true"
             android:theme="@style/Theme.AppCompat">
         </activity>
